--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Boxuan Li GSoC Report
-email: liboxuanhk@gmail.com
+title: PRAJWAL M GSoC Report
+email: prajwalmmath@@gmail.com
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
